feat: adicionado configurações e conexão com o vanco de dados

--- a/MicroservicesShop.ProductApi/appsettings.json
+++ b/MicroservicesShop.ProductApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SqlConnection": "Server=localhost;database=ProductApi;Integrated Security=true;trustedServerCertificate=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
